--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+.images{
+  text-align: center;
+}
+
+.heading{
+  text-align: center;
+}
+
+.new-properties.html{
+  text-align: center;
+}
+
+.text block{
+  text-align: center;
 }
